text change front page

--- a/index.html
+++ b/index.html
@@ -3499,7 +3499,7 @@ limitations under the License.
       <div class="mr2"></div>
       <a href="#" class="text-decoration-none mr2 ampstart-headerbar-fixed-link">
         <div class="ampstart-headerbar-icon-wrapper relative">
-     
+
         </div>
       </a>
     </div>
@@ -3612,59 +3612,28 @@ limitations under the License.
     </div>
 
     <h2 class="land-see-story-subtitle ampstart-subtitle bold max-width-3 mx-auto pb0 pt4 px4">
-      Welcome to My Affiliate Marketing Journey!
+      Welcome to MinnowSpace!
     </h2>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-      <b>Hi there! I’m Minnowspace, a creative, tech-savvy professional with a wealth of experience and a unique skill
-        set
-        that makes
-        me an outstanding affiliate marketer. Whether it’s crafting websites, connecting with audiences, or creating
-        engaging
-        content, I bring a dynamic approach to everything I do. Here’s why I’m the right partner for affiliate marketing
-        success:</b>
+      <b>Minnowspace is your destination for creativity, connection, and community. It’s a space where stories, experiences, and
+      ideas come to life, and everyone has the opportunity to contribute and be part of something special. At its core,
+      Minnowspace is all about people—empowering individuals to share their voices while creating a platform where the rewards
+      are shared.
     </p>
 
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
 
-      Digital Expertise & Social Reach
-      With over 10,000 followers on my X (formerly Twitter) account, I know how to engage and grow an audience. I’m also
-      ready
-      to amplify affiliate campaigns through creative, relatable content on TikTok, YouTube, and beyond—tying it all
-      back to
-      my page to drive traffic and conversions.
+This is just the start of an exciting journey. Minnowspace is built on the idea of collaboration and creativity, and
+we’re laying the foundation for something truly unique in the digital space. While future plans are shaping up behind
+the scenes, today you’ll find inspiring content, engaging conversations, and curated affiliate recommendations for
+products and services that we believe in. Every time you choose one of these products, you’re not only supporting a
+great brand—you’re helping fuel the growth of Minnowspace.
     </p>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-      Web Development Proficiency
-      I can build beautiful, functional websites that stand out. With my experience in APIs and tech, I’ll ensure
-      seamless
-      integration of affiliate tools and provide visitors with a smooth and compelling user experience.</p>
+    For advertisers, Minnowspace offers an authentic and growing audience passionate about discovery and connection. Our
+    vision is to create a thriving digital ecosystem where brands, creators, and audiences all find value.</p>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-      Proven Sales & Marketing Success
-      Whether it was selling homes, cars, or gourmet products at Whole Foods Market, I’ve spent over 8 years mastering
-      the art
-      of connecting with people and matching them with the right products. My time in sales and marketing taught me the
-      strategies to close deals and build lasting relationships.
-    <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-      A Rich, Diverse Background
-      From working in a shampoo factory to managing projects in the South End of Boston, I’ve gained a deep
-      understanding of
-      consumer behavior and industry trends. My broad experience allows me to speak to a variety of audiences
-      authentically
-      and effectively.</p>
-    <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-      A Green Edge
-      As a LEED Accredited Professional, I bring expertise in promoting sustainable and eco-friendly products—a growing
-      niche
-      in the affiliate marketing space.</p>
-    <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-      Creative & Relatable Content
-      I’m not just tech-savvy; I’m also creatively inclined. Whether playing guitar, crafting engaging TikToks, or
-      scripting
-      YouTube videos, I know how to capture attention and deliver value.
-
-
-
-    </p>
+    Join us on this journey and stay tuned for exciting developments. Together, we’re building something extraordinary..
     <div class="land-see-flying-carpet display-none">
       <amp-fx-flying-carpet height="300px">
         <amp-img alt="Minnowspace" class="cover" width="704" height="598" layout="fixed"
@@ -3675,18 +3644,6 @@ limitations under the License.
 
       </div>
     </div>
-    <blockquote class="land-see-blockquote max-width-3 mx-auto py4 px4 relative">
-      <p class="bold mb1 pl4">
-        Let’s team up to make every click count!
-      </p>
-
-    </blockquote>
-    <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-      Affiliate marketing is the perfect synergy of my skills, creativity, and passion for connecting people with great
-      products. With my technical know-how, proven sales record, and vibrant online presence, I’m ready to build
-      partnerships
-      that deliver results.
-    </p>
 
     <div class="land-see-image-gallery mx-auto">
       <amp-carousel id="land-see-kim-carousel" class="mx1" width="813" height="480" layout="responsive"
@@ -3727,8 +3684,7 @@ limitations under the License.
             <button on="tap:AMP.setState({selectedSlide: 1})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 1 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
-                alt="Go to slide 2" width="77" height="58" layout="fixed"
-                src="./img/tea/pexels-lilartsy-1793035.webp">
+                alt="Go to slide 2" width="77" height="58" layout="fixed" src="./img/tea/pexels-lilartsy-1793035.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 2})" class="px0">
@@ -3741,22 +3697,19 @@ limitations under the License.
             <button on="tap:AMP.setState({selectedSlide: 3})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 3 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
-                alt="Go to slide 4" width="77" height="58" layout="fixed"
-                src="./img/tea/pexels-minan1398-1624554.webp">
+                alt="Go to slide 4" width="77" height="58" layout="fixed" src="./img/tea/pexels-minan1398-1624554.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 4})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 4 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
-                alt="Go to slide 5" width="77" height="58" layout="fixed"
-                src="./img/tea/pexels-pixabay-460257.webp">
+                alt="Go to slide 5" width="77" height="58" layout="fixed" src="./img/tea/pexels-pixabay-460257.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 5})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 5 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
-                alt="Go to slide 6" width="77" height="58" layout="fixed"
-                src="./img/hotels/pexels-snapwire-165799.jpg">
+                alt="Go to slide 6" width="77" height="58" layout="fixed" src="./img/hotels/pexels-snapwire-165799.jpg">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 6})" class="px0">
@@ -3771,10 +3724,7 @@ limitations under the License.
       </div>
     </div>
 
-    <p class="land-see-story-copy max-width-3 mx-auto pt1 pb3 px4">
-      Thanks for stopping by! I’m excited to connect with you and explore how we can work together to create a
-      successful affiliate marketing campaign. Let’s chat soon!
-    </p>
+
   </section>
 
   <section class="land-see-story-instagram-container my4 mx-auto center land-see-stories land-see-instagram">
