updated twitter link

--- a/hotels.html
+++ b/hotels.html
@@ -2357,7 +2357,7 @@ limitations under the License.
 
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+        <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
             viewBox="0 0 53 49">
             <title>Twitter</title>
@@ -2405,15 +2405,17 @@ limitations under the License.
           <h1 class="ampstart-fullpage-hero-heading mb3">
             <span class="ampstart-fullpage-hero-heading-text">
               <span class="h6 block caps" style="color:black"></span><span class="h1 block bold caps my1"
-                style="color:white">Lost in Las Vegas</span><span class="h6 block caps" style="color:rgb(255, 255, 255); background-color:darkblue">A New
+                style="color:white">Lost in Las Vegas</span><span class="h6 block caps"
+                style="color:rgb(255, 255, 255); background-color:darkblue">A New
                 Englander’s First Taste of the Desert.</span>
             </span>
           </h1>
 
         </header>
         <footer class="absolute left-0 right-0 bottom-0">
-<a href="https://www.kqzyfj.com/click-101317164-10437077" target="_top">Click Here for the Best Las Vegas Hotel
-  Deals!</a><img src="https://www.tqlkg.com/image-101317164-10437077" width="1" height="1" border="0" />
+          <a href="https://www.kqzyfj.com/click-101317164-10437077" target="_top">Click Here for the Best Las Vegas
+            Hotel
+            Deals!</a><img src="https://www.tqlkg.com/image-101317164-10437077" width="1" height="1" border="0" />
 
 
         </footer>
@@ -2511,16 +2513,16 @@ limitations under the License.
           on="tap:lightbox" role="button" tabindex="0"></amp-img>
         <amp-img src="./img/hotels/pexels-pixabay-414110.jpg" width="300" height="200" alt="Pumpkin Soup"
           on="tap:lightbox" role="button" tabindex="0"></amp-img>
-            <amp-img src="./img/hotels/pexels-quintingellar-847869.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
-              role="button" tabindex="0"></amp-img>
-                <amp-img src="./img/hotels/pexels-ricardo-olvera-225422504-28860862.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
-                  role="button" tabindex="0"></amp-img>
-                    <amp-img src="./img/hotels/pexels-robert-anthony-carbone-190020-598961.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
-                      role="button" tabindex="0"></amp-img>
-                        <amp-img src="./img/hotels/pexels-snapwire-165799.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
-                          role="button" tabindex="0"></amp-img>
-                            <amp-img src="./img/hotels/pexels-zepps-project-837783-2410385.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
-                              role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/hotels/pexels-quintingellar-847869.jpg" width="300" height="200" alt="Pumpkin Soup"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/hotels/pexels-ricardo-olvera-225422504-28860862.jpg" width="300" height="200"
+          alt="Pumpkin Soup" on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/hotels/pexels-robert-anthony-carbone-190020-598961.jpg" width="300" height="200"
+          alt="Pumpkin Soup" on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/hotels/pexels-snapwire-165799.jpg" width="300" height="200" alt="Pumpkin Soup"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/hotels/pexels-zepps-project-837783-2410385.jpg" width="300" height="200" alt="Pumpkin Soup"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
       </amp-carousel>
 
       <p class="mb1">The desert continued to surprise me at every turn. Red Rock Canyon outside of Las Vegas made me
