--- a/menu.amp.html
+++ b/menu.amp.html
@@ -2357,7 +2357,7 @@ limitations under the License.
 
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+        <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
             viewBox="0 0 53 49">
             <title>Twitter</title>
