--- a/stories.amp.html
+++ b/stories.amp.html
@@ -3493,8 +3493,8 @@ limitations under the License.
     <div class="ampstart-headerbar-fixed center m0 p0 flex justify-center nowrap">
       <div class="mr2"></div>
       <a href="#" class="text-decoration-none mr2 ampstart-headerbar-fixed-link">
-        </div>
-      </a>
+    </div>
+    </a>
     </div>
   </header>
 
@@ -3545,7 +3545,7 @@ limitations under the License.
 
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+        <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
             viewBox="0 0 53 49">
             <title>Twitter</title>
@@ -3793,7 +3793,7 @@ limitations under the License.
   <footer class="ampstart-footer flex flex-column items-center mx-auto max-width-3">
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+        <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
             viewBox="0 0 53 49">
             <title>Twitter</title>
