--- a/index.html
+++ b/index.html
@@ -3558,7 +3558,7 @@ limitations under the License.
 
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+        <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
             viewBox="0 0 53 49">
             <title>Twitter</title>
@@ -3615,25 +3615,33 @@ limitations under the License.
       Welcome to MinnowSpace!
     </h2>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-      <b>Minnowspace is your destination for creativity, connection, and community. It’s a space where stories, experiences, and
-      ideas come to life, and everyone has the opportunity to contribute and be part of something special. At its core,
-      Minnowspace is all about people—empowering individuals to share their voices while creating a platform where the rewards
-      are shared.
+      <b>Minnowspace is your destination for creativity, connection, and community. It’s a space where stories,
+        experiences, and
+        ideas come to life, and everyone has the opportunity to contribute and be part of something special. At its
+        core,
+        Minnowspace is all about people—empowering individuals to share their voices while creating a platform where the
+        rewards
+        are shared.
     </p>
 
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
 
-This is just the start of an exciting journey. Minnowspace is built on the idea of collaboration and creativity, and
-we’re laying the foundation for something truly unique in the digital space. While future plans are shaping up behind
-the scenes, today you’ll find inspiring content, engaging conversations, and curated affiliate recommendations for
-products and services that we believe in. Every time you choose one of these products, you’re not only supporting a
-great brand—you’re helping fuel the growth of Minnowspace.
+      This is just the start of an exciting journey. Minnowspace is built on the idea of collaboration and creativity,
+      and
+      we’re laying the foundation for something truly unique in the digital space. While future plans are shaping up
+      behind
+      the scenes, today you’ll find inspiring content, engaging conversations, and curated affiliate recommendations for
+      products and services that we believe in. Every time you choose one of these products, you’re not only supporting
+      a
+      great brand—you’re helping fuel the growth of Minnowspace.
     </p>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-    For advertisers, Minnowspace offers an authentic and growing audience passionate about discovery and connection. Our
-    vision is to create a thriving digital ecosystem where brands, creators, and audiences all find value.</p>
+      For advertisers, Minnowspace offers an authentic and growing audience passionate about discovery and connection.
+      Our
+      vision is to create a thriving digital ecosystem where brands, creators, and audiences all find value.</p>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-    Join us on this journey and stay tuned for exciting developments. Together, we’re building something extraordinary..
+      Join us on this journey and stay tuned for exciting developments. Together, we’re building something
+      extraordinary..
     <div class="land-see-flying-carpet display-none">
       <amp-fx-flying-carpet height="300px">
         <amp-img alt="Minnowspace" class="cover" width="704" height="598" layout="fixed"
@@ -3770,7 +3778,7 @@ great brand—you’re helping fuel the growth of Minnowspace.
             </a>
           </li>
           <li>
-            <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+            <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
               aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
                 viewBox="0 0 53 49">
                 <title>Twitter</title>
@@ -3891,7 +3899,7 @@ great brand—you’re helping fuel the growth of Minnowspace.
   <footer class="ampstart-footer flex flex-column items-center mx-auto max-width-3">
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+        <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
             viewBox="0 0 53 49">
             <title>X</title>
