--- a/tea.html
+++ b/tea.html
@@ -2357,7 +2357,7 @@ limitations under the License.
 
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+        <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
             viewBox="0 0 53 49">
             <title>Twitter</title>
@@ -2431,13 +2431,14 @@ limitations under the License.
         still
         remember the first time I experienced formal tea in London back in 1980. The elegance of it all—the porcelain
         cups, the
-        delicate sandwiches—left a lasting impression, tying tea to some of my fondest memories.  He'd have a spot of tea when he was feeling "coffee'd out".</p>
+        delicate sandwiches—left a lasting impression, tying tea to some of my fondest memories. He'd have a spot of tea
+        when he was feeling "coffee'd out".</p>
       <p class="mb1">
         Tea also reminds me of home, the New England coast, where brewing a pot of gunpowder green tea became a personal
         ritual
         while practicing guitar. The bold, invigorating flavor matched the rhythm of the waves and the cool breeze from
         the
-        ocean, creating moments that felt like pure inspiration.  It's a real Boston tea party up in there.</p>
+        ocean, creating moments that felt like pure inspiration. It's a real Boston tea party up in there.</p>
       <a href="https://www.kqzyfj.com/click-101316119-11430556">
 
         <img src="./img/tea/pexels-pixabay-460257.webp" width="300" height="250" alt="" border="0" /></a>
@@ -2448,7 +2449,8 @@ limitations under the License.
         intention.
         And when summer rolls around, artisan iced tea becomes a refreshing companion, cooling you down while still
         bringing
-        that rich, vibrant flavor to the forefront. I'm in Texas now and southerners are serious about their sweet tea y'all.
+        that rich, vibrant flavor to the forefront. I'm in Texas now and southerners are serious about their sweet tea
+        y'all.
 
       </p>
 
@@ -2493,7 +2495,8 @@ limitations under the License.
         white
         tea, delicate and pure. For those seeking a spicy kick, chai has you covered, while green tea offers earthy
         comfort with
-        a side of wellness. Ginseng Green tea with ginger will give you a nice well rounded flavor with some honey.  And if you're in the mood for something bold and ceremonial, matcha’s vibrant green hue and
+        a side of wellness. Ginseng Green tea with ginger will give you a nice well rounded flavor with some honey. And
+        if you're in the mood for something bold and ceremonial, matcha’s vibrant green hue and
         creamy
         texture never disappoint.</p>
       <div class="my4 mxn3 center">
@@ -2524,7 +2527,8 @@ limitations under the License.
         nuanced
         sip every time. And then there are the flavored teas, bursting with creativity—think spiced apple chai for cozy
         fall
-        vibes or fruity favorites like peach or blueberry for a summer escape.  Tea is a powerhouse of antioxidants and polyphenols too!</p>
+        vibes or fruity favorites like peach or blueberry for a summer escape. Tea is a powerhouse of antioxidants and
+        polyphenols too!</p>
       <p class="mb1">When the holidays roll around, seasonal teas like candy cane or Christmas spice create a festive
         feeling in every sip.
         Feeling a little off-balance? Wellness and detox blends are there to help you find your center. And whether
