--- a/stories.amp.html
+++ b/stories.amp.html
@@ -3803,7 +3803,7 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="https://www.tiktok.com/@m_n_n_w" target="_blank" class="inline-block p1"
+        <a href="https://www.tiktok.com/@minnowspace" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.webp" width="24"
             height="22.2" layout="fixed">
             <title>TikTok</title>
