--- a/index.html
+++ b/index.html
@@ -3844,12 +3844,33 @@ limitations under the License.
     </div>
   </section>
 
+  <amp-form method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top"
+    on="submit-success:AMP.setState({successMessage: true})" on="submit-error:AMP.setState({errorMessage: true})"
+    enctype="application/json">
+  
+    <div class="ampstart-input inline-block relative m0 p0 mb3">
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email" class="block border-none p0 m0"
+        placeholder="Enter email address to subscribe" required />
+    </div>
+  
+    <button type="submit" class="ampstart-btn caps">Subscribe</button>
+  
+    <div submit-success>
+      <p>Subscription successful! Thank you for subscribing.</p>
+    </div>
+  
+    <div submit-error>
+      <p>Something went wrong. Please try again.</p>
+    </div>
+  
+  </amp-form>
 
 
 
   <div class="land-see-subscribe center items-center max-width-4 mx-auto m0 mb3 z1">
     <div class="land-see-subscribe-form z2">
-      <form method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top">
+      <form id="subscribeForm" method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top">
         <fieldset class="border-none p0 m0">
           <h2 class="land-see-subs-heading-text">
             Weekly inspiration from <span class="bold">MINNOWSPACE</span>
