--- a/index.html
+++ b/index.html
@@ -3866,13 +3866,8 @@ limitations under the License.
 
 </amp-form>
 
-<form method="post" action-xhr="https://example.com/subscribe" target="_top">
+<form method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top">
   <fieldset>
-    <label>
-      <span>Name:</span>
-      <input type="text" name="name" required>
-    </label>
-    <br>
     <label>
       <span>Email:</span>
       <input type="email" name="email" required>
