--- a/index.html
+++ b/index.html
@@ -3865,7 +3865,7 @@ limitations under the License.
 
   <div class="land-see-subscribe center items-center max-width-4 mx-auto m0 mb3 z1">
     <div class="land-see-subscribe-form z2">
-      <form id="subscribeForm" method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top">
+      <form id="subscribeForm" method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe"  enctype="application/x-www-form-urlencoded" target="_top">
         <fieldset class="border-none p0 m0">
           <h2 class="land-see-subs-heading-text">
             Weekly inspiration from <span class="bold">MINNOWSPACE</span>
