--- a/index.html
+++ b/index.html
@@ -3893,7 +3893,7 @@ limitations under the License.
           </div>
       </form>
 
-        <form method="post" action-xhr="/api/subscribe" target="_top">
+        <form method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe"  target="_top">
           <input type="email" name="email" required>
           <button type="submit">Subscribe</button>
           <div submit-success>
